@@ -1,5 +1,12 @@
 2007-02-08  Corinna Vinschen  <corinna@vinschen.de>
 
+	* syscalls.cc (check_shm): New static function to do path checking
+	common to shm_open and shm_unlink.  Check for /dev/shm existance.
+	(shm_open): Call check_shm.
+	(shm_unlink): Ditto.
+
+2007-02-08  Corinna Vinschen  <corinna@vinschen.de>
+
 	* cygwin.din (shm_open): Export.
 	(shm_unlink): Export.
 	* syscalls.cc (shm_open): New function.
